[tool.poetry]
name = "advent-code"
version = "0.1.0"
description = ""
authors = ["TonyG <tonyzgao@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
ipykernel = "^6.5.1"
numpy = "^1.21.4"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
sortedcollections = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
