[tool.poetry]
name = "advent-code"
version = "0.1.0"
description = ""
authors = ["TonyG <tonyzgao@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.23.5"
ipykernel = "^6.18.0"

[tool.poetry.dev-dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
