[tool.poetry]
name = "advent-code"
version = "0.1.0"
description = ""
authors = ["TonyG <tonyzgao@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.23.5"
ipykernel = "^6.18.0"
sortedcontainers = "^2.4.0"
intervaltree = "^3.1.0"
scipy = "^1.9.3"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
ortools = "^9.5.2237"

[tool.poetry.dev-dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
