[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Tony Gao", email = "tonyzgao@gmail.com"},
]
dependencies = [
    "ipykernel>=6.26.0",
    "numpy>=1.26.1",
    "intervaltree>=3.1.0",
    "networkx>=3.2.1",
    "matplotlib>=3.8.2",
    "z3-solver>=4.12.4.0",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

