[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "intervaltree>=3.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
]
