[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "regex>=2024.11.6",
    "scipy>=1.14.1",
    "z3-solver>=4.13.3.0",
]

[dependency-groups]
dev = [
    "intervaltree>=3.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
]
