[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "intervaltree>=3.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pip>=25.3",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "z3-solver>=4.15.4.0",
]
